# osrmreader

./: .gitignore  .travis.yml  Cargo.toml  README.md
examples/: basic.rs  osrm2geojson.rs
src/: lib.rs  osrm.rs
tests/: test.osm.bz2  test.osrm
