[package]
name = "osrmreader"
version = "0.1.1"
authors = ["Johannes Hofmann <mail@b-r-u.org>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/b-r-u/osrmreader"
homepage = "https://github.com/b-r-u/osrmreader"
description = """
A reader for *.osrm files that are used by the routing engine OSRM.
"""
categories = ["parser-implementations", "encoding", "science"]
keywords = ["osrm", "parser", "routing", "openstreetmap", "osm"]
license = "MIT OR Apache-2.0"

[badges]
travis-ci = { repository = "b-r-u/osrmreader" }

[dependencies]
byteorder = "1.3"
tar = "0.4"
